tests/errors/test_09.xpp
// Incompatible type for this unary operator

fn main() void {
    let x = 21;
    let y = !x;

    let z = -true;
}